# killrvideo-data

./: .gitignore  CQL version to Cassandra version chart.md  README.md  schema-astra.cql  schema-v4.cql  schema-v5.cql  schema.cql
data-generator/: .env.example  .gitignore  README.md  collect_cassandra_videos.py  config.example.yaml  enhance_descriptions.py  generate.py  generate_from_enhanced.py  pyproject.toml
data-generator/output/: comments.csv  comments_by_user.csv  latest_videos.csv  tag_counts.csv  tags.csv  user_credentials.csv  user_preferences.csv  users.csv  video_playback_stats.csv  video_ratings.csv  video_ratings_by_user.csv
data-generator/output/staging/: -CkHnVOiUN0.json  -Gg_xvuvra4.json  -LwzfqQ-rtg.json  -MkFhtnT2d8.json  -OkquPa-3E0.json  -Qpru1tOIHM.json  -UzePwzAXOA.json  -dMxIU69kuY.json  -sQR-Zood-4.json  -xJfUGCS7Ko.json  -yrkWAjzTIk.json  0Sdj9UBbM_s.json  0Wz--GxVdQQ.json  0eSIJZh2YBE.json  0uXJXme8ENQ.json  0xKvhAFtrag.json  11J11rc7cO4.json  11p03rkB4Pc.json  12A7Fe9o8I8.json  1Ay5aW8rL6Q.json  1BvMQmFUyyw.json  1Dp5akE6Wds.json  1ThxciF1Y00.json  1aRbndIcXV4.json  1cILfRBEmOU.json  1rb8d5gCSpw.json  2451YCgzxVI.json  2MhEgCg80IY.json  2XQjapiYFWQ.json  2g1DPHMmI8s.json  2p1M8KpT8GM.json  2pmD82wtQqU.json  2qSVnQzVpK4.json  3Hqyfl-BMEs.json  3IEPU-SbrM0.json  (+693 more)
data-generator/scripts/: load_to_astra.sh  load_to_cassandra.sh  validate_data.py
data-generator/src/: __init__.py  csv_writer.py  data_generator.py  embeddings.py  enhanced_loader.py  ollama_client.py  relationships.py  transcript_collector.py  youtube_collector.py
(+78 files in other folders)
