[project]
name = "killrvideo-data-generator"
version = "0.1.0"
description = "Generate realistic CSV datasets for KillrVideo Cassandra database"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.150.0",
    "faker>=30.8.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "tqdm>=4.66.5",
    "python-dateutil>=2.9.0",
    "sentence-transformers>=2.2.0",
    "youtube-transcript-api>=1.0.0",
    "requests>=2.31.0",
]
